--- a/home.css
+++ b/home.css
@@ -14,6 +14,7 @@
     text-align: center;
     width: 50%;
     padding-left: 8%;
+    justify-content:space-between;
 }
 .back{
     margin-top: 10%;
