--- a/home.css
+++ b/home.css
@@ -13,7 +13,8 @@
     color: black;
     text-align: center;
     width: 50%;
-    padding-left: 8%;
+    margin-left: 8%;
+    margin-top:3%
 }
 .back{
     margin-top: 10%;
